--- a/public/calendar.html
+++ b/public/calendar.html
@@ -30,7 +30,7 @@
 <body>
 
   <!-- Sample Selects -->
-  <ol id="selectable">
+  <!-- <ol id="selectable">
     <li class="ui-state-default waves-effect waves-light">1</li>
     <li class="ui-state-default waves-effect waves-light">2</li>
     <li class="ui-state-default waves-effect waves-light">3</li>
@@ -43,7 +43,76 @@
     <li class="ui-state-default waves-effect waves-light">10</li>
     <li class="ui-state-default waves-effect waves-light">11</li>
     <li class="ui-state-default waves-effect waves-light">12</li>
-  </ol>
+  </ol> -->
+
+  <div class="container">
+    <!-- Page Content goes here -->
+    <div class="row">
+      <div class="col s1 ui-state-default">S</div>
+      <div class="col s1 ui-state-default">M</div>
+      <div class="col s1 ui-state-default">T</div>
+      <div class="col s1 ui-state-default">W</div>
+      <div class="col s1 ui-state-default">T</div>
+      <div class="col s1 ui-state-default">F</div>
+      <div class="col s1 ui-state-default">S</div>
+    </div>
+    <div class="row" id="selectable">
+      <div class="row">
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+      </div>
+      <div class="row">
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+      </div>
+      <div class="row">
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+      </div>
+      <div class="row">
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+      </div>
+      <div class="row">
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+      </div>
+      <div class="row">
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+        <div class="col s1 ui-state-default"></div>
+      </div>
+    </div>
+  </div>
 
   <!-- Materialize JS -->
   <script type="text/javascript" src="js/materialize.min.js"></script>
