--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
 
 <body>
     <div class="container">
-        <h1 class="center-align"><strong>Align</strong></h1>
-        <button class="center-align waves-effect waves-light btn-large orange-text">Create Calendar</button>
-        <button class="center-align waves-effect waves-light btn-large orange-text">Join Calendar</button> 
+        <div class="row">
+            <div class="col m4">
+            </div>
+            <div class="col m4 center-align">
+                <h1 class=""><strong>Align</strong></h1>
+            </div>
+            <div class="col m4">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col l6 center-align">
+                <button class="center-align waves-effect waves-light btn-large orange-text">Create Calendar</button>
+            </div>
+            <div class="col l6 center-align">
+                <button class="waves-effect waves-light btn-large orange-text">Join Calendar</button>
+            </div>
+        </div>
     </div>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
