--- a/public/calendar.html
+++ b/public/calendar.html
@@ -5,14 +5,13 @@
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!--Import materialize-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
   <!-- Import jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
+
+  <!--Import materialize-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
   <!-- CSS -->
   <link rel="stylesheet" href="./styles/styles.css">
@@ -22,6 +21,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <!-- FullCalendar -->
+  <link href='https://fullcalendar.io/releases/core/4.0.2/main.min.css' rel='stylesheet' />
+  <link href='https://fullcalendar.io/releases/daygrid/4.0.1/main.min.css' rel='stylesheet' />
+  <link href='https://fullcalendar.io/releases/timegrid/4.0.1/main.min.css' rel='stylesheet' />
+
   <!-- Title -->
   <title>My Calendar</title>
 
@@ -29,96 +33,22 @@
 
 <body>
 
-  <!-- Sample Selects -->
-  <!-- <ol id="selectable">
-    <li class="ui-state-default waves-effect waves-light">1</li>
-    <li class="ui-state-default waves-effect waves-light">2</li>
-    <li class="ui-state-default waves-effect waves-light">3</li>
-    <li class="ui-state-default waves-effect waves-light">4</li>
-    <li class="ui-state-default waves-effect waves-light">5</li>
-    <li class="ui-state-default waves-effect waves-light">6</li>
-    <li class="ui-state-default waves-effect waves-light">7</li>
-    <li class="ui-state-default waves-effect waves-light">8</li>
-    <li class="ui-state-default waves-effect waves-light">9</li>
-    <li class="ui-state-default waves-effect waves-light">10</li>
-    <li class="ui-state-default waves-effect waves-light">11</li>
-    <li class="ui-state-default waves-effect waves-light">12</li>
-  </ol> -->
-
   <div class="container">
     <!-- Page Content goes here -->
-    <div class="row">
-      <div class="col s1 ui-state-default">S</div>
-      <div class="col s1 ui-state-default">M</div>
-      <div class="col s1 ui-state-default">T</div>
-      <div class="col s1 ui-state-default">W</div>
-      <div class="col s1 ui-state-default">T</div>
-      <div class="col s1 ui-state-default">F</div>
-      <div class="col s1 ui-state-default">S</div>
-    </div>
-    <div class="row" id="selectable">
-      <div class="row">
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-      </div>
-      <div class="row">
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-      </div>
-      <div class="row">
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-      </div>
-      <div class="row">
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-      </div>
-      <div class="row">
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-      </div>
-      <div class="row">
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-        <div class="col s1 ui-state-default"></div>
-      </div>
-    </div>
+    <div id='calendar'></div>
   </div>
 
   <!-- Materialize JS -->
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <!-- FullCalendar -->
+  <script src="https://fullcalendar.io/releases/core/4.0.2/main.min.js"></script>
+  <script src="https://fullcalendar.io/releases/interaction/4.0.2/main.min.js"></script>
+  <script src="https://fullcalendar.io/releases/daygrid/4.0.1/main.min.js"></script>
+  <script src="https://fullcalendar.io/releases/timegrid/4.0.1/main.min.js"></script>
 
   <!-- JS -->
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/calendar.js"></script>
 
 </body>
 </html>
