--- a/public/calendar.html
+++ b/public/calendar.html
@@ -36,6 +36,13 @@
   <div class="container">
     <!-- Page Content goes here -->
     <div id='calendar'></div>
+    <br>
+    <p>Best time available</p>
+    <ol>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ol>
   </div>
 
   <!-- Materialize JS -->
