--- a/public/calendar.html
+++ b/public/calendar.html
@@ -39,7 +39,7 @@
     <br>
     
     <div>
-        <p>Best time available</p>
+        <p>Best times available:</p>
           <div id="best-times">
             <!-- suggestions here -->
           </div>
