--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     <div id="blue-page" class="block">
         <nav class="pushpin-demo-nav" data-target="blue">
             <div class="nav-wrapper blue-nav">
-                <a href="#" class="brand-logo" id="big-logo">Simple Calendar Sharing...</a>
-                <a href="#" class="center brand-logo" id="small-logo">Period</a>
+                <a href="#" class="brand-logo" id="big-logo-top">Simple Calendar Sharing...</a>
+                <a href="#" class="center brand-logo" id="small-logo-top">Period</a>
             </div>
         </nav>
         <div class="animated bounceInDown container">
@@ -33,7 +33,7 @@
                 <div class="col m4">
                 </div>
                 <div class="col m4 center-align">
-                    <h1 class=""><strong>Align</strong></h1>
+                    <h1 class="h1-top"><strong>Align</strong></h1>
                 </div>
                 <div class="col m4">
                 </div>
@@ -135,10 +135,10 @@
         </div>
     </div>
     <div id="pink-page" class="block lighten-1">
-        <nav class="pushpin-demo-nav" data-target="">
+        <nav class="pushpin-nav" data-target="">
             <div class="nav-wrapper pink-nav">
-                <a href="#" class="brand-logo" id="big-logo">Simple Calendar Sharing...</a>
-                <a href="#" class="center brand-logo" id="small-logo">Period</a>
+                <a href="#" class="brand-logo" id="big-logo-bottom">Simple Calendar Sharing...</a>
+                <a href="#" class="center brand-logo" id="small-logo-bottom">Period</a>
             </div>
         </nav>
         <div class="animated bounceInDown container">
@@ -146,7 +146,7 @@
                 <div class="col m4">
                 </div>
                 <div class="col m4">
-                    <h1 class=""><strong>Who We Are</strong></h1>
+                    <h1 class="h1-bottom"><strong>Who We Are</strong></h1>
                 </div>
                 <div class="col m4">
                 </div>
@@ -156,11 +156,8 @@
                     <img src="" alt="">
                 </div>
                 <div class="col l6">
-                    <p>You would think scheduling a meeting would be simple these days with all the technology we have
-                        at our finger tips.</p>
-                    <p>We were tired of IMing, taking polls, having meetings about meetings. We created a simple sharing
-                        platform, to allow the masses to connect. Set your availability, share your calendar, have your
-                        meeting. Period.</p>
+                    <p>You would think scheduling a meeting would be simple these days with all the technology we have at our finger tips.</p>
+                    <p>We were tired of IMing, taking polls, and having meetings about meetings. So, we created a simple calendar sharing platform to allow the masses to align their schedules easily. Set your availability, share your calendar, have your meeting. Period.</p>
                 </div>
             </div>
         </div>
