--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="modal-footer">
                         <a href="/calendar"
-                            class="modal-action modal-submit waves-effect waves-red btn green lighten-1">Submit</a>
+                            id="join-calendar" class="modal-action modal-submit waves-effect waves-red btn green lighten-1">Submit</a>
                         <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
                     </div>
                 </div>
