demo data added

--- a/public/index.html
+++ b/public/index.html
@@ -125,9 +125,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <a href="/calendar"
-                            id="join-calendar" class="modal-action modal-submit waves-effect waves-red btn green lighten-1">Submit</a>
-                        <a href="#!" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Close</a>
+                        <a href="/calendar" class="modal-action modal-submit waves-effect waves-red btn green lighten-1">Demo Data</a>
+                        <a href="/calendarempty" class="modal-action modal-close waves-effect waves-red btn red lighten-1">Empty</a>
                     </div>
                 </div>
                 <!-- End Modals -->
