calendar empty fix

--- a/public/calendarempty.html
+++ b/public/calendarempty.html
@@ -57,7 +57,7 @@
   <script src="https://fullcalendar.io/releases/timegrid/4.0.1/main.min.js"></script>
 
   <!-- JS -->
-  <script type="text/javascript" src="js/calendar.js"></script>
+  <script type="text/javascript" src="js/calendar.empty.js"></script>
 
 </body>
 </html>
